generate website on `date +%y%m%d`